ambassador/tests/006-headers-and-host/gold.json
{
  "listeners": [
    
    {
      "address": "tcp://0.0.0.0:80",
      
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {"codec_type": "auto",
            "stat_prefix": "ingress_http",
            "use_remote_address": true,
            "access_log": [
              {
                "format": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n",
                "path": "/dev/fd/1"
              }
            ],
            
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "backend",
                  "domains": ["*"],"routes": [
                    
                    {
                      "timeout_ms": 10000,"prefix": "/ambassador/v0/check_ready",
                        "cors": {"allow_credentials": true, "allow_headers": "Content-Type", "allow_methods": "POST, GET, OPTIONS", "allow_origin": ["http://foo.example", "http://bar.example"], "enabled": true, "expose_headers": "X-Custom-Header", "max_age": "86400"},
                      "prefix_rewrite": "/ambassador/v0/check_ready","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_127_0_0_1_8877", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 10000,"prefix": "/ambassador/v0/check_alive",
                        "cors": {"allow_credentials": true, "allow_headers": "Content-Type", "allow_methods": "POST, GET, OPTIONS", "allow_origin": ["http://foo.example", "http://bar.example"], "enabled": true, "expose_headers": "X-Custom-Header", "max_age": "86400"},
                      "prefix_rewrite": "/ambassador/v0/check_alive","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_127_0_0_1_8877", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/cors-creds-array/","cors": {"allow_credentials": true, "allow_headers": "Content-Type", "allow_methods": "POST, GET, OPTIONS", "allow_origin": ["http://foo.example", "http://bar.example"], "enabled": true, "expose_headers": "X-Custom-Header", "max_age": "86400"},
                      "prefix_rewrite": "/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_cors_array_8080", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/cors-all-array/","cors": {"allow_origin": ["*"], "enabled": true},
                      "prefix_rewrite": "/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_cors_array_8080", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 10000,"prefix": "/ambassador/v0/",
                        "cors": {"allow_credentials": true, "allow_headers": "Content-Type", "allow_methods": "POST, GET, OPTIONS", "allow_origin": ["http://foo.example", "http://bar.example"], "enabled": true, "expose_headers": "X-Custom-Header", "max_age": "86400"},
                      "prefix_rewrite": "/ambassador/v0/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_127_0_0_1_8877", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/cors-creds/","cors": {"allow_credentials": true, "allow_headers": "Content-Type", "allow_methods": "POST, GET, OPTIONS", "allow_origin": ["http://foo.example", "http://bar.example"], "enabled": true, "expose_headers": "X-Custom-Header", "max_age": "86400"},
                      "prefix_rewrite": "/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_cors", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/ambassador/",
                        "cors": {"allow_credentials": true, "allow_headers": "Content-Type", "allow_methods": "POST, GET, OPTIONS", "allow_origin": ["http://foo.example", "http://bar.example"], "enabled": true, "expose_headers": "X-Custom-Header", "max_age": "86400"},
                      "prefix_rewrite": "/ambassador/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_127_0_0_1_8877", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/httpbin/",
                        "cors": {"allow_credentials": true, "allow_headers": "Content-Type", "allow_methods": "POST, GET, OPTIONS", "allow_origin": ["http://foo.example", "http://bar.example"], "enabled": true, "expose_headers": "X-Custom-Header", "max_age": "86400"},
                      "headers": [{"name": ":authority", "regex": false, "value": "test.datawire.io"}],"prefix_rewrite": "/","host_rewrite": "httpbin.org","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_httpbin_org_80", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/qotm/",
                        "cors": {"allow_credentials": true, "allow_headers": "Content-Type", "allow_methods": "POST, GET, OPTIONS", "allow_origin": ["http://foo.example", "http://bar.example"], "enabled": true, "expose_headers": "X-Custom-Header", "max_age": "86400"},
                      "headers": [{"name": "x-demo-mode", "regex": false, "value": "host"}, {"name": ":authority", "regex": false, "value": "httpbin.org"}],"prefix_rewrite": "/","host_rewrite": "httpbin.org","request_headers_to_add": [{"key": "x-test-proto", "value": "%PROTOCOL%"}, {"key": "x-test-ip", "value": "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"}, {"key": "x-test-static", "value": "testing"}],"response_headers_to_add": [{"key": "x-response-header", "value": "testing"}],"weighted_clusters [...]
                              "clusters": [
                                  
                                    { "name": "cluster_httpbin_org_80", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/qotm/",
                        "cors": {"allow_credentials": true, "allow_headers": "Content-Type", "allow_methods": "POST, GET, OPTIONS", "allow_origin": ["http://foo.example", "http://bar.example"], "enabled": true, "expose_headers": "X-Custom-Header", "max_age": "86400"},
                      "headers": [{"name": "x-demo-mode", "regex": false, "value": "local"}],"prefix_rewrite": "/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_qotm", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/qotm/",
                        "cors": {"allow_credentials": true, "allow_headers": "Content-Type", "allow_methods": "POST, GET, OPTIONS", "allow_origin": ["http://foo.example", "http://bar.example"], "enabled": true, "expose_headers": "X-Custom-Header", "max_age": "86400"},
                      "headers": [{"name": "x-demo-mode", "regex": false, "value": "cloud"}],"prefix_rewrite": "/qotm/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_demo_getambassador_io", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    
                    
                  ]
                }
              ]
            },
            "filters": [
              {"type": "decoder",
                "name": "extauth",
                "config": {"allowed_headers": ["x-extauth-required", "x-authenticated-as", "x-qotm-session"], "cluster": "cluster_extauth_example_auth_3000", "path_prefix": "/extauth", "timeout_ms": 5000}
              },{
                "name": "cors",
                "config": {}
              },{"type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "admin": {
    "address": "tcp://127.0.0.1:8001",
    "access_log_path": "/tmp/admin_access_log"
  },
  
  "cluster_manager": {
    "clusters": [
      {
        "name": "cluster_127_0_0_1_8877",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://127.0.0.1:8877"
          }
          
        ]},
      {
        "name": "cluster_cors",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://cors:80"
          }
          
        ]},
      {
        "name": "cluster_cors_array_8080",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://cors-array:8080"
          }
          
        ]},
      {
        "name": "cluster_demo_getambassador_io",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://demo.getambassador.io:80"
          }
          
        ]},
      {
        "name": "cluster_extauth_example_auth_3000",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://example-auth:3000"
          }
          
        ]},
      {
        "name": "cluster_httpbin_org_80",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://httpbin.org:80"
          }
          
        ]},
      {
        "name": "cluster_qotm",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://qotm:80"
          }
          
        ]}
      
    ]
  },
  "statsd_udp_ip_address": "127.0.0.1:8125",
  "stats_flush_interval_ms": 1000
}
